# 42_libft

./: CMakeLists.txt  Makefile  ft_atoi.c  ft_buf.c  ft_buf_ref.c  ft_chr.c  ft_chr2.c  ft_endian16.c  ft_endian32.c  ft_endian64.c  ft_endian_priv.h  ft_io.c  ft_io2.c  ft_isspace.c  ft_mem.c  ft_mem2.c  ft_memmove.c  ft_memset.c  ft_num.c  ft_parse.c  ft_putchar_fd.c  ft_putstr_fd.c  ft_str.c  ft_str2.c  ft_str3.c  ft_str4.c  ft_str5.c  ft_str6.c  ft_strnew.c  ft_strnstr.c  ft_strstr.c  ft_strtrim.c  libft.h
includes/: ft_buf.h  ft_chr.h  ft_dbg.h  ft_endian.h  ft_err.h  ft_io.h  ft_mem.h  ft_num.h  ft_parse.h  ft_printf.h  ft_str.h  libft.h
printf/: ft_printf.c  parse.c  priv.h  spec.c
